# miniparser

./: .gitignore  CMakeLists.txt  clear.sh  run_test.sh
include/: parser.h  table.h  token.h  var.h
src/: main.c  parser.c  table.c  token.c  var.c
tests/: sample.dyd  sample.mini  sample.pro  sample.var  sample1.dyd  sample1.mini  sample1.pro  sample1.var  sample2.dyd  sample2.mini  sample2.var
