CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(minilex)
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic -Werror")

SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/target)

AUX_SOURCE_DIRECTORY(src SRC_LIST)

ADD_EXECUTABLE(miniparser ${SRC_LIST})

TARGET_INCLUDE_DIRECTORIES(miniparser PRIVATE include)